k8s-testserver-openshift.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-testserver-deployment
  namespace: grantsdb-test
  labels:
    app: k8s-testserver-demo
  annotations:
    authors: isas-fsd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-testserver-demo
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: k8s-testserver-demo
        version: 0.0.1
    spec:
      containers:
        - image: 'epflsi/k8s-testserver:latest'
          imagePullPolicy: Always
          name: k8s-testserver-demo
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 150m
              memory: 150Mi
            requests:
              cpu: 50m
              memory: 50Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 1
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: k8s-testserver-service
  namespace: grantsdb-test
  labels:
    app: k8s-testserver-demo
  annotations:
    authors: isas-fsd
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: k8s-testserver-demo
  type: ClusterIP


---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: k8s-testserver-service
  namespace: grantsdb-test
  labels:
    app: k8s-testserver-demo
  annotations:
    authors: isas-fsd
spec:
  host: k8s-demo.128.178.222.83.nip.io
  port:
    targetPort: "80"
  tls:
    termination: edge
  to:
    kind: Service
    name: k8s-testserver-service
    weight: 100
  wildcardPolicy: None
