k8s-testserver-rke2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: miaow-test

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-testserver-deployment
  namespace: miaow-test
  labels:
    app: k8s-testserver-demo
  annotations:
    authors: isas-fsd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-testserver-demo
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: k8s-testserver-demo
        version: 0.0.1
    spec:
      containers:
        - image: 'epflsi/k8s-testserver:latest'
          imagePullPolicy: Always
          name: k8s-testserver-demo
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 150m
              memory: 150Mi
            requests:
              cpu: 50m
              memory: 50Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 1
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: k8s-testserver-service
  namespace: miaow-test
  labels:
    app: k8s-testserver-demo
  annotations:
    authors: isas-fsd
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: k8s-testserver-demo
  type: ClusterIP


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miaow
  namespace: miaow-test
spec:
  rules:
    # itsgitlab0002.xaas.epfl.ch and itsgitlab0003.xaas.epfl.ch are
    # our worker nodes according to
    # https://docs.google.com/spreadsheets/d/19_g6eNCIMY3F8Wi6VnAozZ_7LzlJyh-l0yhyOmOA7RI/edit?gid=0#gid=0
    # ; as part of our “poor man's” test deployment (whence the Træfik
    # chart is simply configured with ports.websecure.hostPort set to
    # 443), Træfik can be on either node at any given time. (Find out
    # with `kubectl get pods -n traefik-ingress-system -o wide`).
    # Therefore we need two rules:
    - host: itswbhst0018.xaas.epfl.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-testserver-service
                port:
                  number: 80
    - host: itswbhst0020.xaas.epfl.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-testserver-service
                port:
                  number: 80
